Bug 698061 - document.importNode's deep attribute should be optional, r=sicking